erDiagram
    auth_users {
        uuid id PK
        text email
        text encrypted_password
        timestamp email_confirmed_at
        timestamp last_sign_in_at
        json raw_user_meta_data
        timestamp created_at
    }

    users {
        uuid id PK "FK -> auth.users(id) ON DELETE CASCADE"
        text email
        text username
        boolean is_admin DEFAULT false
        boolean is_active DEFAULT true
        timestamp created_at
        timestamp updated_at
    }

    admin_audit_log {
        uuid id PK
        uuid caller_id
        text action
        json payload
        text ip_address
        text user_agent
        timestamp created_at
    }

    settings {
        text key PK
        jsonb value DEFAULT '{}'
        timestamp updated_at
    }

    auth_users ||--|| users : "INSERT via trigger"
    users ||--o{ admin_audit_log : "records admin actions"
    users ||--o{ settings : "admin reads/updates"
